MOBILE-3422 tabs: Fix grey bar on iOS when tabs are hidden

--- a/src/components/ion-tabs/ion-tabs.scss
+++ b/src/components/ion-tabs/ion-tabs.scss
@@ -44,7 +44,7 @@ ion-app.app-root core-ion-tabs {
             }
         }
 
-        .tabbar[hidden] + .tabcontent {
+        .tabbar[hidden] + .tabcontent, &.tabbar-hidden .tabcontent {
             width: 100%;
             core-ion-tab {
                 @include position(0, 0, 0, 0);
